added rel noopener to links & HR table

--- a/plug-n-play-template/core-1col-full-horz-img-border.html
+++ b/plug-n-play-template/core-1col-full-horz-img-border.html
@@ -2,7 +2,7 @@
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:20px 20px 20px 20px;">
-        <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:none;">
           <img src="https://picsum.photos/g/560/160" alt="Add ALT Text here" width="560" height="260" border="0" style="display:block;border-radius: 11px !important;" class="photo" />
         </a>
       </td>
