--- a/plug-n-play-template/core-2col-half-horz-text-button-img.html
+++ b/plug-n-play-template/core-2col-half-horz-text-button-img.html
@@ -27,7 +27,7 @@
                             <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                               <tr>
                                 <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                  <a href="https://cahnrs.wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                                  <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
                                 </td>
                               </tr>
                             </table>
