--- a/plug-n-play-template/footer-cahnrs.html
+++ b/plug-n-play-template/footer-cahnrs.html
@@ -5,8 +5,8 @@
         <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
             <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-              <p style="margin:0;">421 Hulbert Hall, PO Box 646242, Pullman, WA 99164-6242<br/>
-    509-335-4561 | Fax: 509-335-1065 | <a href="mailto:cahnrs.deans@wsu.edu" style="color: #333333; text-decoration: underline;">cahnrs.deans@wsu.edu</a> | <a href="https://cahnrs.wsu.edu/" style="color: #333333; text-decoration: underline;">cahnrs.wsu.edu</a></p>
+              <p style="margin:0;">421&nbsp;Hulbert&nbsp;Hall, PO&nbsp;Box&nbsp;646242, Pullman,&nbsp;WA&nbsp;99164-6242<br/>
+    509-335-4561&nbsp;| Fax:&nbsp;509-335-1065&nbsp;| <a href="mailto:cahnrs.deans@wsu.edu" style="color: #333333; text-decoration: underline;">cahnrs.deans@wsu.edu</a>&nbsp;| <a href="https://cahnrs.wsu.edu/" style="color: #333333; text-decoration: underline;">cahnrs.wsu.edu</a></p>
             </td>
           </tr>
         </table>
