--- a/plug-n-play-template/test-img-heading-wrapped-in-a.html
+++ b/plug-n-play-template/test-img-heading-wrapped-in-a.html
@@ -31,7 +31,7 @@ img {
 }
 a {
   color: inherit;
-  /*outline: none;*/
+  outline: none;
   text-decoration: none;
 }
 a[x-apple-data-detectors] {
@@ -87,10 +87,6 @@ a[x-apple-data-detectors] {
   padding-right: 10px !important;
   padding-left: 10px !important;
 }
-.paddingRightLeft20 {
-  padding-right: 20px !important;
-  padding-left: 20px !important;   
-}
 }
 </style>
 <!--[if mso]>
@@ -135,7 +131,19 @@ button-like text: snow
       <tr>
         <td align="center" valign="top">
 <!-- ADD HERE -->
+<!-- 1COL FULL IMAGE -->
+<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+    <tr>
+      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:none;">
+          <img src="https://picsum.photos/g/600/200" alt="" width="600" height="200" border="0" style="display:block;" class="photo" />
+          <h1 style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:24px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; margin:0; color:#454343;">Heading 1 Email ipsum bounce message</h1>
 
+        </a>
+      </td>
+    </tr>
+  </table>
+<!-- END 1COL FULL IMAGE -->
 <!-- END ADD HERE -->
         </td>
       </tr>
