--- a/plug-n-play-template/testing-snow.html
+++ b/plug-n-play-template/testing-snow.html
@@ -190,7 +190,7 @@ button-like text: snow
 <table role="presentation" bgcolor="c" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
-        <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
+        <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:none;">
           <img src="https://picsum.photos/g/600/200" alt="" width="600" height="200" border="0" style="display:block;" class="photo" />
         </a>
 
@@ -202,7 +202,7 @@ button-like text: snow
 <table role="presentation" bgcolor="#000000" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
         <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#DDDDDD; padding:20px 20px 20px 20px;">
-            <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+            <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
             <ol style="padding:0 0 0 40px; margin:0;">
             <li class="firstListItem" style="margin:0 0 5px 0;">First Item</li>
             <li style="margin:0 0 5px 0;">Item 2</li>
@@ -249,7 +249,7 @@ button-like text: snow
                           <table role="presentation" bgcolor="#000000" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#000000;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                             <tr>
                               <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                <a href="https://cahnrs.wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#000000;">Button</a>
+                                <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#000000;">Button</a>
                               </td>
                             </tr>
                           </table>
