--- a/plug-n-play-template/header-view-online.html
+++ b/plug-n-play-template/header-view-online.html
@@ -2,7 +2,7 @@
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-        <p style="margin:0;">Preheader align="left" | <a href="https://cahnrs.wsu.edu/" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">View Online</a></p>
+        <p style="margin:0;">Preheader align="left" | <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">View Online</a></p>
       </td>
     </tr>
   </table>
