--- a/plug-n-play-template/testing-google-fonts.html
+++ b/plug-n-play-template/testing-google-fonts.html
@@ -155,7 +155,7 @@ footer color: #333333
 <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
     <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-      <p style="margin:0;">Preheader align="left" | <a href="https://wsu.edu/" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">View Online</a></p>
+      <p style="margin:0;">Preheader align="left" | <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">View Online</a></p>
     </td>
   </tr>
 </table>
@@ -226,7 +226,7 @@ footer color: #333333
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
   <tr>
     <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
-      <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
+      <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:none;">
         <img src="http://email.cahnrs.wsu.edu/html/cahnrs/cahnrs-footer.jpg" alt="College of Agricultural, Human, and Natural Resource Science" width="600" height="40" border="0" style="display:block;" class="photo" />
       </a>
     </td>
@@ -244,7 +244,7 @@ footer color: #333333
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
   <tr>
     <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
-      <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
+      <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:none;">
         <img src="https://picsum.photos/g/600/200" alt="" width="600" height="200" border="0" style="display:block;" class="photo" />
       </a>
     </td>
@@ -270,7 +270,7 @@ footer color: #333333
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
   <tr>
     <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:20px 20px 20px 20px;">
-      <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
+      <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:none;">
         <img src="https://picsum.photos/g/560/160" alt="" width="560" height="260" border="0" style="display:block;border-radius: 11px !important;" class="photo" />
       </a>
     </td>
@@ -321,7 +321,7 @@ footer color: #333333
 <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
     <td class="paddingRightLeft10" align="left" valign="top" style="font-family: 'Spicy Rice', cursive; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
-      <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+      <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
       <ol style="padding:0 0 0 40px; margin:0;">
       <li class="firstListItem" style="margin:0 0 5px 0;">First Item</li>
       <li style="margin:0 0 5px 0;">Item 2</li>
@@ -342,7 +342,7 @@ footer color: #333333
               <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                 <tr>
                   <td align="center" valign="middle" style="font-family: 'Spicy Rice', cursive; font-size:14px;line-height:150%; mso-line-height-rule:exactly; padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                    <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:underline;display:block;color:#FFFFFF;">Button</a>
+                    <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:underline;display:block;color:#FFFFFF;">Button</a>
                   </td>
                 </tr>
               </table>
@@ -381,7 +381,7 @@ footer color: #333333
 <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
     <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
-      <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+      <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
       <ol style="padding:0 0 0 40px; margin:0;">
       <li class="firstListItem" style="margin:0 0 5px 0;">First Item</li>
       <li style="margin:0 0 5px 0;">Item 2</li>
@@ -413,7 +413,7 @@ footer color: #333333
       <table role="presentation" bgcolor="#EEEEEE" class="widthFull" style="border-radius: 11px !important;" cellpadding="0" cellspacing="0" border="0" width="560">
         <tr>
           <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
-            <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+            <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
             <ol style="padding:0 0 0 40px; margin:0;">
             <li class="firstListItem" style="margin:0 0 5px 0;">First Item</li>
             <li style="margin:0 0 5px 0;">Item 2</li>
@@ -470,7 +470,7 @@ footer color: #333333
                           <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                             <tr>
                               <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                                <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -563,7 +563,7 @@ footer color: #333333
                           <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                             <tr>
                               <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                                <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -695,7 +695,7 @@ footer color: #333333
                           <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                             <tr>
                               <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                                <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -805,7 +805,7 @@ footer color: #333333
                           <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#FFFFFF;color:#981E32;border-width:2px; border-style: solid;border-color:#000000;">
                             <tr>
                               <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#981E32;">Button</a>
+                                <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#981E32;">Button</a>
                               </td>
                             </tr>
                           </table>
@@ -851,7 +851,7 @@ footer color: #333333
                           <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                               <tr>
                               <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                  <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                                  <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
                               </td>
                               </tr>
                           </table>
@@ -881,7 +881,7 @@ footer color: #333333
                               <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                                   <tr>
                                   <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                      <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                                      <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
                                   </td>
                                   </tr>
                               </table>
@@ -911,7 +911,7 @@ footer color: #333333
                           <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
                               <tr>
                               <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                  <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                                  <a href="http://wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
                               </td>
                               </tr>
                           </table>
@@ -967,7 +967,7 @@ footer color: #333333
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
         <tr>
           <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-            <p style="margin:0;"><a href="<!-- tmpl_var list_unsubscribe_link -->" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
+            <p style="margin:0;"><a href="<!-- tmpl_var list_unsubscribe_link -->" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
           </td>
         </tr>
         <tr>
@@ -995,7 +995,7 @@ footer color: #333333
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
         <tr>
           <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-              <p style="margin:0;"><a href="*|FORWARD|*" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Forward to a Friend</a> | <a href="*|UPDATE_PROFILE|*" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Update your profile</a> | <a href="*|UNSUB|*" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
+              <p style="margin:0;"><a href="*|FORWARD|*" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Forward to a Friend</a> | <a href="*|UPDATE_PROFILE|*" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Update your profile</a> | <a href="*|UNSUB|*" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
           </td>
         </tr>
         <tr>
@@ -1023,7 +1023,7 @@ footer color: #333333
       <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
         <tr>
           <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-            <p style="margin:0;"><a href="tbd" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Terms</a> | <a href="tbd" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Policies</a> | <a href="tbd" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Preferences</a> | <a href="tbd" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
+            <p style="margin:0;"><a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Terms</a> | <a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Policies</a> | <a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Preferences</a> | <a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
           </td>
         </tr>
         <tr>
