--- a/plug-n-play-template/testing-button.html
+++ b/plug-n-play-template/testing-button.html
@@ -6,8 +6,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 <title>EMAIL TITLE</title>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
-<!-- FAVICON -->
-<link rel="shortcut icon" type="image/x-icon" href="https://repo.wsu.edu/spine/1/favicon.ico" />
 <style type="text/css">
 body {
   height: 100% !important;
@@ -33,7 +31,7 @@ img {
 }
 a {
   color: inherit;
-  /*outline: none; */
+  /*outline: none;*/
   text-decoration: none;
 }
 a[x-apple-data-detectors] {
@@ -137,7 +135,23 @@ button-like text: snow
       <tr>
         <td align="center" valign="top">
 <!-- ADD HERE -->
-
+<!-- Source: https://buttons.cm/ -->
+<!-- arcsize in <v:roundrect changes depending on the border radius in teh anchor -->
+<!-- 1COL FULL TEXT -->
+<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+    <tr>
+        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+            <div><!--[if mso]>
+                <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://cahnrs.wsu.edu/" style="height:40px;v-text-anchor:middle;width:200px;" arcsize="25%" strokecolor="#981232" fillcolor="#981232">
+                  <w:anchorlock/>
+                  <center style="color:#ffffff;font-family:sans-serif;font-size:16px;font-weight:bold;">Button!</center>
+                </v:roundrect>
+              <![endif]--><a href="https://cahnrs.wsu.edu/"
+              style="background-color:#981232;border:1px solid #981232;border-radius:10px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:16px;font-weight:bold;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;mso-hide:all;">Button!</a></div>
+        </td>
+    </tr>
+</table>
+<!-- END 1COL FULL TEXT -->
 <!-- END ADD HERE -->
         </td>
       </tr>
