--- a/plug-n-play-template/base-wsu-favicon.html
+++ b/plug-n-play-template/base-wsu-favicon.html
@@ -137,7 +137,21 @@ button-like text: snow
       <tr>
         <td align="center" valign="top">
 <!-- ADD HERE -->
-
+<!-- END ADD PREVIEW HERE -->   
+<table bgcolor="purple" style="background-color:purple;" role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="500">
+  <tr>
+    <td align="center" valign="top">
+<!-- ADD VIEW ONLINE HERE -->
+<!-- END ADD VIEW ONLINE HERE -->
+<!-- BODY COPY SECTION -->
+<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+<tr><td>
+<!-- IMPORTANT: To avoid line in iphones the content area needs to be wrapped in a table (above) of the same background -->
+<!-- ADD HERE -->
+<!-- END ADD HERE -->
+</td></tr></table>
+<!-- END BODY COPY SECTION -->
+<!-- ADD FOOTER HERE -->
 <!-- END ADD HERE -->
         </td>
       </tr>
