--- a/plug-n-play-template/base.html
+++ b/plug-n-play-template/base.html
@@ -117,6 +117,7 @@ email background: purple
 preview: orange
 Image Overlay background color: #FFA500
 color: #333333
+copy background: #ffffff
 heading color: #454343
 copy link color: #981e32
 button color: #981e32
@@ -134,8 +135,17 @@ button-like text: snow
     <table bgcolor="purple" style="background-color:purple;" role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="500">
       <tr>
         <td align="center" valign="top">
+<!-- ADD VIEW ONLINE HERE -->
+<!-- END ADD VIEW ONLINE HERE -->
+<!-- BODY COPY SECTION -->
+<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+<tr><td>
+<!-- IMPORTANT: To avoid line in iphones the content area needs to be wrapped in a table (above) of the same background -->
 <!-- ADD HERE -->
-
+<!-- END ADD HERE -->
+</td></tr></table>
+<!-- END BODY COPY SECTION -->
+<!-- ADD FOOTER HERE -->
 <!-- END ADD HERE -->
         </td>
       </tr>
