--- a/plug-n-play-template/core-1col-full-horz-line.html
+++ b/plug-n-play-template/core-1col-full-horz-line.html
@@ -1,4 +1,4 @@
-<!-- 1COL FULL HORX LINE-->
+<!-- 1COL FULL HORZ LINE-->
 <!-- width of 1st table (600) equals padding (left & right) plus width of 2nd table -->
 <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
@@ -13,4 +13,4 @@
     </td>
   </tr>
 </table>
-<!-- END 1COL FULL HORX LINE-->
+<!-- END 1COL FULL HORZ LINE-->
