--- a/plug-n-play-template/footer-cahnrs.html
+++ b/plug-n-play-template/footer-cahnrs.html
@@ -6,7 +6,7 @@
           <tr>
             <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
               <p style="margin:0;">421&nbsp;Hulbert&nbsp;Hall, PO&nbsp;Box&nbsp;646242, Pullman,&nbsp;WA&nbsp;99164-6242<br/>
-    509-335-4561&nbsp;| Fax:&nbsp;509-335-1065&nbsp;| <a href="mailto:cahnrs.deans@wsu.edu" style="color: #333333; text-decoration: underline;">cahnrs.deans@wsu.edu</a>&nbsp;| <a href="https://cahnrs.wsu.edu/" style="color: #333333; text-decoration: underline;">cahnrs.wsu.edu</a></p>
+    509-335-4561&nbsp;| <a href="mailto:cahnrs.deans@wsu.edu" style="color: #333333; text-decoration: underline;">cahnrs.deans@wsu.edu</a>&nbsp;| <a href="https://cahnrs.wsu.edu/" style="color: #333333; text-decoration: underline;">cahnrs.wsu.edu</a></p>
             </td>
           </tr>
         </table>
