Updated colors used for easy replacement
Find and Replace shoudl work with all files; see base files for list to replace

--- a/plug-n-play-template/base.html
+++ b/plug-n-play-template/base.html
@@ -24,6 +24,19 @@ table, td {
   mso-table-lspace: 0pt;
   mso-table-rspace: 0pt;
 }
+.sr-only {
+  border: 0; 
+  clip: rect(0 0 0 0); 
+  clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+  -webkit-clip-path: polygon(0px 0px, 0px 0px, 0px 0px);
+  height: 1px; 
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap;
+}
 img {
   outline: none;
   text-decoration: none;
@@ -112,33 +125,36 @@ li.lastListItem {margin-bottom:20px !important;}
 </style>
 <![endif]-->
 <!--
-FIND & REPLACE
-email background: purple
-preview: orange
+FIND & REPLACE (suggested replacement)
+Email background: RebeccaPurple (#EFF0F1)
+Background: White (#FFFFFF)
+Font color: Black (#454343)
+link color: DarkRed (#981e32)
+heading color: MidnightBlue
+Preview text: GhostWhite
+View Online: Gray (#333333)
+Button color: DarkRed (#981e32)
+Button text: Snow (#FFFFFF)
+Horizontal Rule: FireBrick 
+footer link color: DimGray
+footer color: DimGray
+button-like background: DarkRed (#981e32)
+button-like border: DarkRed (#981e32)
+button-like text: Snow (#FFFFFF)
 Image Overlay background color: #FFA500
-color: #333333
-copy background: #ffffff
-heading color: #454343
-copy link color: #981e32
-button color: #981e32
-footer link color: #3a3a3a
-footer color: #333333
-button-like background: DarkRed
-button-like border: aqua
-button-like text: snow
 -->
 </head>
-<body bgcolor="purple" style="margin:0; padding:0; min-width:100% !important; background-color:purple;">
-  <div align="center" style="background-color:purple;">
+<body bgcolor="RebeccaPurple" style="margin:0; padding:0; min-width:100% !important; background-color:RebeccaPurple;">
+  <div align="center" style="background-color:RebeccaPurple;">
 <!-- ADD PREVIEW HERE --> 
 <!-- END ADD PREVIEW HERE -->   
-    <table bgcolor="purple" style="background-color:purple;" role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="500">
+    <table bgcolor="RebeccaPurple" style="background-color:RebeccaPurple;" role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="500">
       <tr>
         <td align="center" valign="top">
 <!-- ADD VIEW ONLINE HERE -->
 <!-- END ADD VIEW ONLINE HERE -->
 <!-- BODY COPY SECTION -->
-<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+<table role="presentation" bgcolor="White" cellpadding="0" cellspacing="0" border="0">
 <tr><td>
 <!-- IMPORTANT: To avoid line in iphones the content area needs to be wrapped in a table (above) of the same background -->
 <!-- ADD HERE -->
