--- a/plug-n-play-template/core-3col-horz-socialicons.html
+++ b/plug-n-play-template/core-3col-horz-socialicons.html
@@ -1,5 +1,5 @@
 <!--  3COL SOCIAL/ICONS  -->
-  <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top">
         <table role="presentation" align="center" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
@@ -7,13 +7,13 @@
             <td align="center" valign="top">
               <table role="presentation" cellpadding="0" cellspacing="0" border="0">
                 <tr>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#333333; padding:20px 10px 20px 20px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:Black; padding:20px 10px 20px 20px;">
                     <img src="https://picsum.photos/g/40/40" alt="" width="40" height="40" border="0" style="display:block;" />
                   </td>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#333333; padding:20px 10px 20px 10px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:Black; padding:20px 10px 20px 10px;">
                     <img src="https://picsum.photos/g/40/40" alt="" width="40" height="40" border="0" style="display:block;" />
                   </td>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;  color:#333333; padding:20px 20px 20px 10px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;  color:Black; padding:20px 20px 20px 10px;">
                     <img src="https://picsum.photos/g/40/40" alt="" width="40" height="40" border="0" style="display:block;" />
                   </td>
                 </tr>
