--- a/plug-n-play-template/core-3col-thirds-horz-img-text-text-button-like.html
+++ b/plug-n-play-template/core-3col-thirds-horz-img-text-text-button-like.html
@@ -1,5 +1,5 @@
 <!-- 3COL THIRDS IMG TEXT TEXT/BUTTON -->
-<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+<table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="center" valign="top">
         <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
@@ -8,7 +8,7 @@
   <!-- IMG -->                     
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                 <tr>
-                  <td class="paddingRight20" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;color:#333333; padding:20px 20px 20px 20px;">
+                  <td class="paddingRight20" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;color:Black; padding:20px 20px 20px 20px;">
                     <img src="https://picsum.photos/g/160/150" alt="" width="160" height="150" border="0" style="display:block;" class="photo" />
                   </td>
                 </tr>
@@ -21,7 +21,7 @@
   <!-- CONTENT -->
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                 <tr>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
                     <p style="margin:0;">Terms fill future confirm sign accept inform engagement internet protocol display. Throttle identify accessibility execute success offer method default series detail section purchase portion loyal local. Field comply represent Hypertext Markup Language.</p>
                   </td>
                 </tr>
@@ -34,17 +34,17 @@
   <!-- PRE-BUTTON CONTENT -->
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                 <tr>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
                     <p style="margin:0;">Terms fill future confirm sign accept inform engagement internet protocol display. Throttle identify accessibility execute success offer method default series detail section purchase portion loyal local. Field comply represent Hypertext Markup Language.</p>
   <!-- PRE-BUTTON CONTENT -->
   <!-- BUTTON --> 
-                      <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="160">
+                      <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="160">
                         <tr>
-                          <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:10px 0 20px 0;">
-                            <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#FFFFFF;color:#981E32;border-width:2px; border-style: solid;border-color:#000000;">
+                          <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:DarkRed; padding:10px 0 20px 0;">
+                            <table role="presentation" bgcolor="White" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:DarkRed;color:Snow;border-width:2px; border-style: solid;border-color:DarkRed;">
                               <tr>
                                 <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                  <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#981E32;">Button</a>
+                                  <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:Snow;">Button</a>
                                 </td>
                               </tr>
                             </table>
