--- a/plug-n-play-template/break.html
+++ b/plug-n-play-template/break.html
@@ -1,7 +1,7 @@
 <!-- BREAK -->
-  <table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <table role="presentation" bgcolor="RebeccaPurple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
-      <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
+      <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Lime; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
     </tr>
   </table>
  <!-- END BREAK -->
