--- a/plug-n-play-template/button.html
+++ b/plug-n-play-template/button.html
@@ -1,16 +1,16 @@
 <!-- Source: https://buttons.cm/ -->
 <!-- arcsize in <v:roundrect changes depending on the border radius in the anchor -->
 <!-- 1COL FULL TEXT -->
-	<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+	<table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
 		<tr>
-			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
 				<div><!--[if mso]>
-					<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://cahnrs.wsu.edu/" style="height:40px;v-text-anchor:middle;width:200px;" arcsize="25%" strokecolor="#981232" fillcolor="#981232">
+					<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="https://cahnrs.wsu.edu/" style="height:40px;v-text-anchor:middle;width:200px;" arcsize="25%" strokecolor="DarkRed" fillcolor="DarkRed">
 					  <w:anchorlock/>
-					  <center style="color:#ffffff;font-family:sans-serif;font-size:16px;font-weight:bold;">Button!</center>
+					  <center style="color:White;font-family:sans-serif;font-size:16px;font-weight:bold;">Button!</center>
 					</v:roundrect>
 				  <![endif]--><a href="https://cahnrs.wsu.edu/"
-				  style="background-color:#981232;border:1px solid #981232;border-radius:10px;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:16px;font-weight:bold;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;mso-hide:all;">Button!</a></div>
+				  style="background-color:DarkRed;border:1px solid DarkRed;border-radius:10px;color:White;display:inline-block;font-family:sans-serif;font-size:16px;font-weight:bold;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;mso-hide:all;">Button!</a></div>
 			</td>
 		</tr>
 	</table>
