--- a/plug-n-play-template/core-1col-full-horz-cahnrs-img.html
+++ b/plug-n-play-template/core-1col-full-horz-cahnrs-img.html
@@ -1,8 +1,8 @@
 <!-- 1COL FULL CAHNRS IMAGE -->
-<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+<table role="presentation" bgcolor="White" cellpadding="0" cellspacing="0" border="0">
     <tr>
-      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
-        <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:none;">
+      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:DarkRed; padding:0px 0px 0px 0px;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:DarkRed; text-decoration:none;">
           <img src="http://email.cahnrs.wsu.edu/html/cahnrs/cahnrs-footer.jpg" alt="College of Agricultural, Human, and Natural Resource Sciences" width="600" height="40" border="0" style="display:block;" class="photo" />
         </a>
       </td>
