--- a/plug-n-play-template/core-1col-full-horz-line.html
+++ b/plug-n-play-template/core-1col-full-horz-line.html
@@ -1,11 +1,11 @@
 <!-- 1COL FULL HORZ LINE-->
 <!-- width of 1st table (600) equals padding (left & right) plus width of 2nd table -->
-<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+<table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
-    <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:100%; mso-line-height-rule:exactly; color:#454343; padding:0px 90px 0px 90px;">
-      <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="420">
+    <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:100%; mso-line-height-rule:exactly; color:FireBrick; padding:0px 90px 0px 90px;">
+      <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="420">
         <tr>
-          <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:100%; mso-line-height-rule:exactly; color:#454343; border-bottom:1px solid #454343; padding:0;">
+          <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:100%; mso-line-height-rule:exactly; color:FireBrick; border-bottom:1px solid FireBrick; padding:0;">
             <p style="margin:0;">&nbsp;</p>
           </td>
         </tr>
