--- a/plug-n-play-template/core-1col-full-horz-text-button.html
+++ b/plug-n-play-template/core-1col-full-horz-text-button.html
@@ -1,8 +1,8 @@
 <!-- 1COL FULL TEXT/BUTTON -->
-	<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+	<table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
 		<tr>
-			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
-				<p style="margin:0;">Email  ipsum <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
+				<p style="margin:0;">Email  ipsum <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:DarkRed; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
 				<ol style="padding:0 0 0 40px; margin:0;">
 				<li class="firstListItem" style="margin:0 0 5px 0;">First Item</li>
 				<li style="margin:0 0 5px 0;">Item 2</li>
@@ -17,13 +17,13 @@
 				</ul>
 				<p style="margin:0;">Address reply receiving domain Block recipient practices sent.</p>
 	<!-- BUTTON --> 
-					<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="560">
+					<table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="560">
 						<tr>
-							<td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#981e32; padding:10px 0 20px 0;">
-								<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
+							<td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:DarkRed; padding:10px 0 20px 0;">
+								<table role="presentation" bgcolor="White" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:DarkRed;color:Snow;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
 									<tr>
 										<td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;line-height:150%; mso-line-height-rule:exactly; padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-											<a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:underline;display:block;color:#FFFFFF;">Button</a>
+											<a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:Snow">Button</a>
 										</td>
 									</tr>
 								</table>
