--- a/plug-n-play-template/core-1col-full-horz-text-dean-signature.html
+++ b/plug-n-play-template/core-1col-full-horz-text-dean-signature.html
@@ -1,12 +1,14 @@
-<table role="presentation" bgcolor="#fff0c9" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <!-- 1COL FULL TEXTDEAN'S SIGNATURE -->
+  <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
-        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:16px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0 20px 10px 40px;">
+        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:16px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0 20px 10px 40px;">
             <img style="display:block;" src="http://email.cahnrs.wsu.edu/html/cahnrs-dean/2019/dean-wright-signature.png" alt=" " width="280" height="59" border="0">
         </td>
         </tr>
         <tr>
-        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:16px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0 60px 20px 60px;">
+        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:16px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0 60px 20px 60px;">
           André-Denis Wright, CAHNRS Dean</p>
         </td>
     </tr>
   </table>
+  <!-- END 1COL FULL TEXT DEAN'S DEAN'S SIGNATURE -->
