--- a/plug-n-play-template/core-1col-full-horz-text-h1.html
+++ b/plug-n-play-template/core-1col-full-horz-text-h1.html
@@ -1,8 +1,8 @@
 <!-- 1COL FULL TEXT-H1 -->         
-  <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
-      <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:24px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; color:#454343; padding:20px 20px 20px 20px;">
-        <h1 style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:24px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; margin:0; color:#454343;">Heading 1Email ipsum bounce message</h1>
+      <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:24px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
+        <h1 style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:24px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; margin:0; color:MidnightBlue;">Heading 1Email ipsum bounce message</h1>
       </td>
     </tr>
   </table>
