--- a/plug-n-play-template/core-1col-full-horz-text-img-button-overlay.html
+++ b/plug-n-play-template/core-1col-full-horz-text-img-button-overlay.html
@@ -1,8 +1,8 @@
-<!-- 1COL FULL TEXT-IMAGE-BUTTON OVERLAY -->
+<!-- 1COL FULL TEXT-IMAGE-BUTTON OVERLAY 
 FIND & REPLACE
 Image: https://picsum.photos/g/600/300 
 Image Height & Width: 
-Background color: #FFA500
+Background color: #FFA500 -->
 <!-- Background IMAGE -->
 <table role="presentation" bgcolor="#FFA500" cellpadding="0" cellspacing="0" border="0">
   <tr>
@@ -18,8 +18,8 @@ Background color: #FFA500
 <!-- 1COL FULL CAHNRS IMAGE -->
 <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
-      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:18px; font-weight: normal; color:#FFFFFF; padding:20px 20px 20px 20px;border:3px solid white;">
-        <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#FFFFFF; text-decoration:none;">
+      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:18px; font-weight: normal; color:White; padding:20px 20px 20px 20px;border:3px solid white;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:DarkRed; text-decoration:none;">
           <img src="http://email.cahnrs.wsu.edu/html/images/cahnrs-abbrv-horiz-logo-white.png" alt="College of Agricultural, Human, and Natural Resource Science" width="385" height="57" border="0" style="display:block" class="photo" />
         </a>
       </td>
@@ -29,16 +29,16 @@ Background color: #FFA500
 <!-- 1COL FULL TEXT -->
 <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
-     <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#FFFFFF; padding:20px 20px 20px 20px;border:3px solid white;">
-      <p style="margin:0;">Email  ipsum <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+     <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;border:3px solid white;">
+      <p style="margin:0;">Email  ipsum <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:DarkRed; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
 <!-- BUTTON --> 
 <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="540">
   <tr>
-    <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#981e32; padding:10px 0 20px 0;">
-      <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
+    <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:DarkRed; padding:10px 0 20px 0;">
+      <table role="presentation" bgcolor="White" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:DarkRed;color:Snow;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
         <tr>
           <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;line-height:150%; mso-line-height-rule:exactly; padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-            <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:underline;display:block;color:#FFFFFF;">Button</a>
+            <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:underline;display:block;color:Snow">Button</a>
           </td>
         </tr>
       </table>
