--- a/plug-n-play-template/core-1col-full-horz-text-img.html
+++ b/plug-n-play-template/core-1col-full-horz-text-img.html
@@ -1,5 +1,9 @@
+<!-- FIND & REPLACE
+Image: https://picsum.photos/g/600/200 
+Image Height & Width: 
+Background color: #FFA500 -->
 <!-- 1COL FULL TEXT-IMAGE -->
-<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+<table role="presentation" bgcolor="White" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td bgcolor="#FFA500" style="background-image: url('https://picsum.photos/g/600/200');"
         background="https://picsum.photos/g/600/200" width="600" height="200">
