--- a/plug-n-play-template/core-1col-full-horz-text.html
+++ b/plug-n-play-template/core-1col-full-horz-text.html
@@ -1,8 +1,8 @@
 <!-- 1COL FULL TEXT -->
-	<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+	<table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
 		<tr>
-			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
-				<p style="margin:0;">Email  ipsum <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
+				<p style="margin:0;">Email  ipsum <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:DarkRed; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
 				<ol style="padding:0 0 0 40px; margin:0;">
 				<li class="firstListItem" style="margin:0 0 5px 0;">First Item</li>
 				<li style="margin:0 0 5px 0;">Item 2</li>
