--- a/plug-n-play-template/core-2col-half-horz-text.html
+++ b/plug-n-play-template/core-2col-half-horz-text.html
@@ -1,5 +1,5 @@
 <!-- 2COL HALF TEXT TEXT -->
-  <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="center" valign="top">
         <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
@@ -7,7 +7,7 @@
             <td align="left" valign="top">
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="300">
                 <tr>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
                     <p style="margin:0;">Terms fill future confirm sign accept inform engagement internet protocol display. Throttle identify accessibility execute success offer method default series detail section purchase portion loyal local. Field comply represent Hypertext Markup Language.</p>
                   </td>
                 </tr>
@@ -18,7 +18,7 @@
               <![endif]-->
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="300">
                 <tr>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;line-height:150%; mso-line-height-rule:exactly; color:Black; padding:20px 20px 20px 20px;">
                     <p style="margin:0;">Terms fill future confirm sign accept inform engagement internet protocol display. Throttle identify accessibility execute success offer method default series detail section purchase portion loyal local. Field comply represent Hypertext Markup Language.</p>
                   </td>
                 </tr>
