--- a/plug-n-play-template/core-3col-thirds-button-like.html
+++ b/plug-n-play-template/core-3col-thirds-button-like.html
@@ -1,5 +1,5 @@
 <!-- 3COL THIRDS VERTICAL BUTTON-LIKE -->
-<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+<table role="presentation" bgcolor="DarkRed" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="center" valign="top">
         <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
@@ -8,15 +8,15 @@
 <!-- COLUMN 1 -->
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                 <tr>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0px 0px 0px 0px;">         
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0px 0px 0px 0px;">         
 <!-- PRE-BUTTON CONTENT -->
 <!-- BUTTON --> 
-                    <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
+                    <table role="presentation" bgcolor="DarkRed" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                         <tr>
-                            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:snow; padding:0px 0px 0px 0px;">
-                            <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate !important;background-color:DarkRed;color:snow;">
+                            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:Snow; padding:0px 0px 0px 0px;">
+                            <table role="presentation" bgcolor="DarkRed" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate !important;background-color:DarkRed;color:Snow;">
                                 <tr>
-                                <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;border-top: 4px solid aqua;border-right: 2px solid aqua;border-bottom: 4px solid aqua;border-left: 4px solid aqua;">
+                                <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;border-top: 4px solid DarkRed;border-right: 2px solid DarkRed;border-bottom: 4px solid DarkRed;border-left: 4px solid DarkRed;">
                                     <p style="margin:0;">Terms fill future confirm sign accept inform engagement internet protocol display.</p>
                                 </td>
                                 </tr>
@@ -36,15 +36,15 @@
 <!-- COLUMN 2 -->
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                     <tr>
-                      <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0px 0px 0px 0px;">
+                      <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0px 0px 0px 0px;">
 <!-- PRE-BUTTON CONTENT -->
 <!-- BUTTON --> 
-                        <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
+                        <table role="presentation" bgcolor="DarkRed" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                             <tr>
-                                <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:snow; padding:0px 0px 0px 0px;">
-                                <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate !important;background-color:DarkRed;color:snow;">
+                                <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:Snow; padding:0px 0px 0px 0px;">
+                                <table role="presentation" bgcolor="DarkRed" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate !important;background-color:DarkRed;color:Snow;">
                                     <tr>
-                                    <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;border-top: 4px solid aqua;border-right: 2px solid aqua;border-bottom: 4px solid aqua;border-left: 2px solid aqua;height:112px;">
+                                    <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;border-top: 4px solid DarkRed;border-right: 2px solid DarkRed;border-bottom: 4px solid DarkRed;border-left: 2px solid DarkRed;height:112px;">
                                         <p style="margin:0;">Terms fill future confirm sign accept </p>
                                     </td>
                                     </tr>
@@ -64,15 +64,15 @@
 <!-- COLUMN 3 -->
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                 <tr>
-                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0px 0px 0px 0px;">
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0px 0px 0px 0px;">
 <!-- PRE-BUTTON CONTENT -->
 <!-- BUTTON --> 
-                    <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
+                    <table role="presentation" bgcolor="DarkRed" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                         <tr>
-                            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:snow; padding:0px 0px 0px 0px;">
-                            <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate !important;background-color:DarkRed;color:snow;">
+                            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:Snow; padding:0px 0px 0px 0px;">
+                            <table role="presentation" bgcolor="DarkRed" cellpadding="0" cellspacing="0" border="0" width="100%" style="border-collapse:separate !important;background-color:DarkRed;color:Snow;">
                                 <tr>
-                                <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;border-top: 4px solid aqua;border-right: 4px solid aqua;border-bottom: 4px solid aqua;border-left: 2px solid aqua;">
+                                <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;border-top: 4px solid DarkRed;border-right: 4px solid DarkRed;border-bottom: 4px solid DarkRed;border-left: 2px solid DarkRed;">
                                     <p style="margin:0;">Terms fill future confirm sign accept inform engagement internet protocol display.</p>
                                 </td>
                                 </tr>
