--- a/plug-n-play-template/footer-dadamail.html
+++ b/plug-n-play-template/footer-dadamail.html
@@ -1,17 +1,17 @@
 <!-- FOOTER DADA MAIL -->
-  <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top">
         <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
-            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-              <p style="margin:0;"><a href="<!-- tmpl_var list_unsubscribe_link -->" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
+            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:DimGray; padding:20px 20px 20px 20px;">
+              <p style="margin:0;"><a href="<!-- tmpl_var list_unsubscribe_link -->" target="_blank" rel="noopener" style="color: DimGray; outline: none; text-decoration: underline;">Unsubscribe</a></p>
             </td>
           </tr>
           <tr>
-            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:0px 20px 20px 20px;">
+            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:DimGray; padding:0px 20px 20px 20px;">
                 <p style="margin:0;">421 Hulbert Hall, PO Box 646242, Pullman, WA 99164-6242<br/>
-      509-335-4561 | Fax: 509-335-1065 | <a href="mailto:cahnrs.deans@wsu.edu" style="color: #333333; text-decoration: underline;">cahnrs.deans@wsu.edu</a> | <a href="https://cahnrs.wsu.edu/" style="color: #333333; text-decoration: underline;">cahnrs.wsu.edu</a></p>
+      509-335-4561 | Fax: 509-335-1065 | <a href="mailto:cahnrs.deans@wsu.edu" style="color: DimGray; text-decoration: underline;">cahnrs.deans@wsu.edu</a> | <a href="https://cahnrs.wsu.edu/" style="color: DimGray; text-decoration: underline;">cahnrs.wsu.edu</a></p>
               </td>
           </tr>
         </table>
