--- a/plug-n-play-template/footer-generic.html
+++ b/plug-n-play-template/footer-generic.html
@@ -1,15 +1,15 @@
 <!-- FOOTER GENERIC -->
-  <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top">
         <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
-            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-              <p style="margin:0;"><a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Terms</a> | <a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Policies</a> | <a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Preferences</a> | <a href="tbd" target="_blank" rel="noopener" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
+            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:DimGray; padding:20px 20px 20px 20px;">
+              <p style="margin:0;"><a href="tbd" target="_blank" rel="noopener" style="color: DimGray; outline: none; text-decoration: underline;">Terms</a> | <a href="tbd" target="_blank" rel="noopener" style="color: DimGray; outline: none; text-decoration: underline;">Policies</a> | <a href="tbd" target="_blank" rel="noopener" style="color: DimGray; outline: none; text-decoration: underline;">Preferences</a> | <a href="tbd" target="_blank" rel="noopener" style="color: DimGray; outline: none; text-decoration: underline;">Unsubscribe</a></p>
             </td>
           </tr>
           <tr>
-            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; text-decoration: none;line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0px 20px 20px 20px;">
+            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; text-decoration: none;line-height:150%; mso-line-height-rule:exactly; color:DimGray; padding:0px 20px 20px 20px;">
               <p style="margin:0;">&copy; 2017. Header provider strategic consulting support conversation advertisements policy promotional request. Option purpose programming intentional logo color account correct user rates.</p>
             </td>
           </tr>
