--- a/plug-n-play-template/html-links.html
+++ b/plug-n-play-template/html-links.html
@@ -1,1 +1,1 @@
-<a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:#981e32; text-decoration:underline;">bounce message</a>
+<a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:DarkRed; text-decoration:underline;">bounce message</a>
