housekeeping on code

--- a/plug-n-play-template/base.html
+++ b/plug-n-play-template/base.html
@@ -159,7 +159,8 @@ Image Overlay background color: #FFA500
 <!-- IMPORTANT: To avoid line in iphones the content area needs to be wrapped in a table (above) of the same background -->
 <!-- ADD HERE -->
 <!-- END ADD HERE -->
-</td></tr></table>
+</td></tr>
+</table>
 <!-- END BODY COPY SECTION -->
 <!-- ADD FOOTER HERE -->
 <!-- END ADD HERE -->
