--- a/plug-n-play-template/core-1col-full-horz-text-dean-signature.html
+++ b/plug-n-play-template/core-1col-full-horz-text-dean-signature.html
@@ -7,7 +7,7 @@
         </tr>
         <tr>
         <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:16px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0 60px 20px 60px;">
-          André-Denis Wright, CAHNRS Dean</p>
+          <p style="margin:0;">André-Denis Wright, CAHNRS Dean</p>
         </td>
     </tr>
   </table>
