--- a/plug-n-play-template/time-table.html
+++ b/plug-n-play-template/time-table.html
@@ -1,49 +1,49 @@
 <!-- 1COL FULL TEXT -->
-<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+<table role="presentation" bgcolor="White" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
-        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:#737373; padding:5px 10px 10px 20px;border-right:2px solid #bb9221;" width="75">
+        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:Black; padding:5px 10px 10px 20px;border-right:2px solid Gold;" width="75">
             <p style="margin:0 0 5px 0;font-size:24px;font-weight:bold;">9:00</p>
             <p style="margin:0;text-align: right;font-size:16px;">am</p>
         </td>
-        <td class="paddingRightLeft10" align="left" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#737373; padding:0px 20px 0px 10px;">
+        <td class="paddingRightLeft10" align="left" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0px 20px 0px 10px;">
             <p style="margin:0"><strong>Steptoe Butte State Park Heritage Site Visit</strong><br />
                 Stop by the park to experience where Cashup Davis built his vision and grand&nbsp;hotel.<br />
                 Location: Steptoe Butte State&nbsp;Park</p>
         </td>
     </tr>
     <tr>
-        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:#737373; padding:15px 20px 0px 20px;">
+        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:Black; padding:15px 20px 0px 20px;">
           <p style="margin:0;">&nbsp;</p>
         </td>
-        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:#737373; padding:15px 20px 0px 20px;">
+        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:Black; padding:15px 20px 0px 20px;">
           <p style="margin:0;">&nbsp;</p>
         </td>
     </tr>
     <tr>
-        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:#737373; padding:5px 10px 0px 20px;border-right:2px solid #bb9221;">
+        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:Black; padding:5px 10px 0px 20px;border-right:2px solid Gold;">
             <p style="margin:0 0 5px 0;font-size:24px;font-weight:bold;">11:30</p>
             <p style="margin:0;text-align: right;font-size:16px;">am</p>
         </td>
-        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#737373; padding:0px 20px 0px 10px;">
+        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0px 20px 0px 10px;">
             <p style="margin:0;"><strong>Celebrate Cashup Davis Harvest&nbsp;Luncheon</strong><br />
                 Honor Cashup Davis’ history and legacy with a harvest lunch and old-time&nbsp;tunes.<br />
                 Location: Ensminger Pavilion, WSU&nbsp;Pullman&nbsp;Campus</p>
         </td>
     </tr>
     <tr>
-        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:#737373; padding:15px 20px 0px 20px;">
+        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:Black; padding:15px 20px 0px 20px;">
           <p style="margin:0;">&nbsp;</p>
         </td>
-        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:#737373; padding:15px 20px 0px 20px;">
+        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:Black; padding:15px 20px 0px 20px;">
           <p style="margin:0;">&nbsp;</p>
         </td>
     </tr>
     <tr>
-        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:#737373; padding:5px 10px 0px 20px;border-right:2px solid #bb9221;">
+        <td class="paddingRightLeft10" align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:125%; mso-line-height-rule:exactly; color:Black; padding:5px 10px 0px 20px;border-right:2px solid Gold;">
             <p style="margin:0 0 5px 0;font-size: 24px;font-weight:bold;">5:30</p>
             <p style="margin:0;text-align: right;font-size:16px;">pm</p>
         </td>
-        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#737373; padding:0px 20px 0px 10px;">
+        <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:Black; padding:0px 20px 0px 10px;">
             <p style="margin:0;"><strong>Washington State University Foundation Reception</strong><br />
                 Join Washington State University leadership as we celebrate the establishment of the Cashup Davis Family Endowed Dean of&nbsp;CAHNRS.<br />
                 Location: WSU Alumni Association Patio, WSU&nbsp;Pullman&nbsp;Campus</p>
