linked image fix

--- a/plug-n-play-template/core-1col-full-horz-img-linked.html
+++ b/plug-n-play-template/core-1col-full-horz-img-linked.html
@@ -2,7 +2,9 @@
   <table role="presentation" bgcolor="White" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:DarkRed; padding:0px 0px 0px 0px;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" rel="noopener" style="color:DarkRed; text-decoration:none;">
           <img src="https://picsum.photos/g/600/200" alt="Add ALT Text here" width="600" height="200" border="0" style="display:block;" class="photo" />
+        </a>
       </td>
     </tr>
   </table>
